# vidhub-control

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  backends.html  config.html  discovery.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  reference.html  requirements-test.txt  requirements.txt  runtests.sh  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: backends.doctree  config.doctree  discovery.doctree  environment.pickle  index.doctree  overview.doctree  reference.doctree
.github/workflows/: ci-test.yml  dist-test.yml
_modules/: index.html
_modules/pydispatch/: properties.html
_modules/vidhubcontrol/: config.html  discovery.html
doc/: Makefile  requirements.txt
doc/source/: backends.rst  common.rst  conf.py  config.rst  discovery.rst  index.rst  overview.rst  reference.rst
tests/: conftest.py  smartscope-preamble.txt  smartview-preamble.txt  test_common.py  test_config.py  test_dynamic_hostaddr.py  test_midi_events.py  test_osc.py  test_prop_setters.py  test_runserver.py  test_telnet_backend.py  utils.py  vidhub-preamble.txt
tests/kv/: conftest.py  test_kv_app.py  test_kv_control.py  test_kv_edit.py  test_kv_newdevice.py  test_kv_presetedit.py  test_kv_presets.py  test_kv_smartscope.py  test_numeric_widget.py
tools/: get_setup_requires.py  install-deps.sh
vidhubcontrol/: __init__.py  aiotelnetlib.py  common.py  config.py  discovery.py  runserver.py  utils.py
vidhubcontrol/backends/: __init__.py  base.py  dummy.py  telnet.py
vidhubcontrol/kivyui/: ipsettings.kv  ipsettings.py  main.py  newdevice.kv  newdevice.py  requirements.txt  smartview.kv  smartview.py  utils.kv  utils.py  vidhubcontrol.kv  vidhubedit.kv  vidhubedit.py  (+4 more)
(+12 files in other folders)
