[metadata]
name = vidhub-control
version = 0.0.3
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/vidhub-control
project_urls =
    Documentation = https://vidhub-control.readthedocs.io
    Source = https://github.com/nocarryr/vidhub-control
description = Control Smart Videohub Devices
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Video


[options]
packages = find:
include_package_data = True
install_requires =
    python-dispatch>=0.1.0
    json-object-factory
    zeroconf>=0.31.0
    python-osc
    pid
    netifaces

[options.extras_require]
kivy = kivy>=2.0.0

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    vidhubcontrol-web = vidhubcontrol.sofi_ui.main:run_app
    vidhubcontrol-server = vidhubcontrol.runserver:main
    vidhubcontrol-ui = vidhubcontrol.kivyui.main:main [kivy]

[options.package_data]
* = LICENSE*, README*
vidhubcontrol.kivyui = *.kv


[tool:pytest]
testpaths = tests
python_files = *.py
norecursedirs = kv
faulthandler_timeout = 300
xvfb_width = 1280
xvfb_height = 720
xvfb_colordepth = 24
xvfb_args = +extension GLX
